--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/12531dd9e9.js" crossorigin="anonymous" defer></script>
-    <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/12531dd9e9.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Urbanist&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
-        <h1>Holulosamo</h1>
-    </header>
-
-    <aside class="panel">
+        <div class="header-wrap">
+            <h1>Titulo</h1>
+        <div class="menu-button">
+            <i class="fas fa-bars"></i>
+        </div>
         <nav class="nav">
             <ul class="menu">
                 <li class="menu__list"><a href="#" class="menu__link">Seccion 1</a></li>
@@ -23,31 +29,55 @@
                 <li class="menu__list"><a href="#" class="menu__link">Seccion 4</a></li>
             </ul>
         </nav>
-    </aside>
+        </div>
+    </header>
 
     <main>
         <section class="section-1">
             <article class="article-1">
-                <h1 class="title">Titulo</h1>
+                <h2 class="title">Titulo</h2>
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
                 Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
                 Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
                 Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
             </article>
         </section>
-        <section class="section-1">
-            <article class="article-1">
-                <h1 class="title">Titulo</h1>
+        <section class="section-2">
+            <article class="article-2">
+                <h2 class="title">Titulo</h2>
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
                 Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
                 Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
                 Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
+            </article>
+        </section>
+
+
+        <section class="cards">
+            <article class="cards__items">
+                <h2>Titulo</h2>
+                <img src="https://www.placeimg.com/200/200/tech" alt="">
+                <p>Parrafo</p>
+                <a href="#">Boton</a>
+            </article>
+            <article class="cards__items">
+                <h2>Titulo</h2>
+                <img src="https://www.placeimg.com/200/200/tech" alt="">
+                <p>Parrafo</p>
+                <a href="#">Boton</a>
+            </article>
+            <article class="cards__items">
+                <h2>Titulo</h2>
+                <img src="https://www.placeimg.com/200/200/tech" alt="">
+                <p>Parrafo</p>
+                <a href="#">Boton</a>
             </article>
         </section>
     </main>
 
     <footer>
-
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
