--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Urbanist&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -36,10 +39,12 @@
         <section class="section-1">
             <article class="article-1">
                 <h2 class="title">Titulo</h2>
+                <div class="img-container"><img src="assets/campaign-creators-iEiUITs149M-unsplash.jpg"></div>
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
                 Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
                 Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
                 Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
+                <a href="#" class="text-button">Button</a>
             </article>
         </section>
         <section class="section-2">
@@ -49,11 +54,19 @@
                 Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
                 Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
                 Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
+
+                <a href="#">Button</a>
             </article>
         </section>
 
 
         <section class="cards">
+            <article class="cards__items">
+                <h2>Titulo</h2>
+                <img src="https://www.placeimg.com/200/200/tech" alt="">
+                <p>Parrafo</p>
+                <a href="#">Boton</a>
+            </article>
             <article class="cards__items">
                 <h2>Titulo</h2>
                 <img src="https://www.placeimg.com/200/200/tech" alt="">
