--- a/index.html
+++ b/index.html
@@ -8,19 +8,12 @@
     <script src="https://kit.fontawesome.com/12531dd9e9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Urbanist&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="header-wrap">
-            <h1>Titulo</h1>
+        <h1>Titulo</h1>
         <div class="menu-button">
             <i class="fas fa-bars"></i>
         </div>
@@ -32,22 +25,33 @@
                 <li class="menu__list"><a href="#" class="menu__link">Seccion 4</a></li>
             </ul>
         </nav>
-        </div>
     </header>
 
+    
     <main>
+        <section class="sliders">
+            <div class="sliders active"></div>
+            <div class="sliders"></div>
+            <div class="sliders"></div>
+            <div class="sliders"></div>
+        </section>
+
         <section class="section-1">
             <article class="article-1">
                 <h2 class="title">Titulo</h2>
-                <div class="img-container"><img src="assets/campaign-creators-iEiUITs149M-unsplash.jpg"></div>
+                <div class="img-container">
+                    <img src="assets/campaign-creators-iEiUITs149M-unsplash.jpg">
+                </div>
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
                 Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
                 Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
                 Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
-                <a href="#" class="text-button">Button</a>
+                <div class="containerBtn">
+                    <a href="#" class="articleBtn">Button</a>
+                </div>
             </article>
         </section>
-        <section class="section-2">
+        <section class="section-2" >
             <article class="article-2">
                 <h2 class="title">Titulo</h2>
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
@@ -55,7 +59,9 @@
                 Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
                 Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
 
-                <a href="#">Button</a>
+                <div class="containerBtn">
+                    <a href="#" class="articleBtn">Button</a>
+                </div>
             </article>
         </section>
 
