trying to make an slider

--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
     </header>
 
     
-    <main>
+    <main class="container">
         <section class="sliders">
-            <div class="sliders active"></div>
-            <div class="sliders"></div>
-            <div class="sliders"></div>
-            <div class="sliders"></div>
+            <div class="sliders__item active">
+            </div>
+            <div class="sliders__item">
+            </div>
+            <div class="sliders__item">
+            </div>
+            <div class="sliders__item">
+            </div>
         </section>
 
-        <section class="section-1">
+        <section class="sections section-1">
             <article class="article-1">
                 <h2 class="title">Titulo</h2>
                 <div class="img-container">
@@ -51,7 +55,7 @@
                 </div>
             </article>
         </section>
-        <section class="section-2" >
+        <section class="sections section-2" >
             <article class="article-2">
                 <h2 class="title">Titulo</h2>
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
