--- a/index.html
+++ b/index.html
@@ -6,25 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/12531dd9e9.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
-        <h1>Titulo</h1>
-        <div class="menu-button">
-            <i class="fas fa-bars"></i>
+        <div class="container">
+            
         </div>
-        <nav class="nav">
-            <ul class="menu">
-                <li class="menu__list"><a href="#" class="menu__link">Seccion 1</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Seccion 2</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Seccion 3</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Seccion 4</a></li>
-            </ul>
-        </nav>
     </header>
 
     
