Changing css variables and navbar styles

--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
 <body>
     <header class="header">
         <div class="container">
-            
+            <h1 class="header__title">Titulo</h1>
+            <div class="menu-button">
+                <i class="fas fa-bars"></i>
+            </div>
+            <nav class="nav">
+                <ul class="menu">
+                    <li class="menu__list"><a href="#" class="menu__link">Seccion 1</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Seccion 2</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Seccion 3</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Seccion 4</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     
-    <main>
+    <main class="main">
         <section class="sliders">
             <div class="sliders active"></div>
             <div class="sliders"></div>
