--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1>Titulo</h1>
+            <h1  class="header__title">Titulo</h1>
         <div class="menu-button">
             <i class="fas fa-bars"></i>
         </div>
