adding styles to cards

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +8,15 @@
     <script src="https://kit.fontawesome.com/12531dd9e9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1  class="header__title">Titulo</h1>
+            <h1 class="header__title"><i class="fas fa-home"></i></h1>
         <div class="menu-button">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars  button"></i>
         </div>
         <nav class="nav">
             <ul class="menu">
@@ -31,71 +31,45 @@
 
     
     <main class="main">
-        <section class="sliders">
-            <div class="sliders__item active">
-            </div>
-            <div class="sliders__item">
-            </div>
-            <div class="sliders__item">
-            </div>
-            <div class="sliders__item">
-            </div>
-        </section>
-
-        <section class="sections section-1">
+        <section class="sections  section-1" id="Text">
             <article class="article-1">
                 <h2 class="title">Titulo</h2>
-                <div class="img-container">
-                    <img src="assets/campaign-creators-iEiUITs149M-unsplash.jpg">
-                </div>
-                <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
-                Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
-                Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
-                Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
-                <div class="containerBtn">
-                    <a href="#" class="articleBtn">Button</a>
-                </div>
+                <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velitfugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.</p>
+                <a href="#" class="btn">BUTTON</a>
             </article>
-        </section>
-        <section class="sections section-2" >
-            <article class="article-2">
-                <h2 class="title">Titulo</h2>
-                <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velit, fugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.
-                Aliquam consequuntur quidem nostrum consequatur laboriosam possimus sint dolorum nesciunt excepturi incidunt eveniet distinctio asperiores iusto ducimus inventore voluptate mollitia animi voluptatem at odio, fuga voluptatibus aperiam? Autem, excepturi rem!
-                Hic explicabo ipsum nulla laboriosam beatae esse, id placeat voluptatibus ut non est, error illo maiores officia atque aspernatur repudiandae. Ullam commodi vitae tempore quis dolores vel dolorem soluta. Eum?
-                Quia cumque maiores id veniam ipsa officiis. Est labore nihil suscipit fugiat nam architecto ad? Obcaecati dolorum, explicabo sequi dolorem pariatur nisi voluptatum maiores ullam ex repudiandae iusto tenetur doloremque.</p>
-
-                <div class="containerBtn">
-                    <a href="#" class="articleBtn">Button</a>
-                </div>
-            </article>
-        </section>
+        </section>  
 
 
-        <section class="cards">
-            <article class="cards__items">
-                <h2>Titulo</h2>
-                <img src="https://www.placeimg.com/200/200/tech" alt="">
-                <p>Parrafo</p>
-                <a href="#">Boton</a>
+        <section class="sections cards-container" id="Cards">
+            <article class="cards-container__items">
+                <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
+                <h2 class="card-title">Titulo</h2>
+                <p class='card-text'>Parrafo</p>
+                <a href="#" class="card-button">Boton</a>
             </article>
-            <article class="cards__items">
-                <h2>Titulo</h2>
-                <img src="https://www.placeimg.com/200/200/tech" alt="">
-                <p>Parrafo</p>
-                <a href="#">Boton</a>
+            <article class="cards-container__items">
+                <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
+                <h2 class="card-title">Titulo</h2>
+                <p class='card-text'>Parrafo</p>
+                <a href="#" class="card-button">Boton</a>
             </article>
-            <article class="cards__items">
-                <h2>Titulo</h2>
-                <img src="https://www.placeimg.com/200/200/tech" alt="">
-                <p>Parrafo</p>
-                <a href="#">Boton</a>
+            <article class="cards-container__items">
+                <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
+                <h2 class="card-title">Titulo</h2>
+                <p class='card-text'>Parrafo</p>
+                <a href="#" class="card-button">Boton</a>
             </article>
-            <article class="cards__items">
-                <h2>Titulo</h2>
-                <img src="https://www.placeimg.com/200/200/tech" alt="">
-                <p>Parrafo</p>
-                <a href="#">Boton</a>
+            <article class="cards-container__items">
+                <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
+                <h2 class="card-title">Titulo</h2>
+                <p class='card-text'>Parrafo</p>
+                <a href="#" class="card-button">Boton</a>
+            </article>
+            <article class="cards-container__items">
+                <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
+                <h2 class="card-title">Titulo</h2>
+                <p class='card-text'>Parrafo</p>
+                <a href="#" class="card-button">Boton</a>
             </article>
         </section>
     </main>
