solved a problem with the cards

--- a/index.html
+++ b/index.html
@@ -43,32 +43,42 @@
         <section class="sections cards-container" id="Cards">
             <article class="cards-container__items">
                 <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
-                <h2 class="card-title">Titulo</h2>
-                <p class='card-text'>Parrafo</p>
+                <div class="card-text-container">
+                    <h2 class="card-title">Titulo</h2>
+                    <p class='card-text'>Parrafo</p>
+                </div>
                 <a href="#" class="card-button">Boton</a>
             </article>
             <article class="cards-container__items">
                 <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
-                <h2 class="card-title">Titulo</h2>
-                <p class='card-text'>Parrafo</p>
+                <div class="card-text-container">
+                    <h2 class="card-title">Titulo</h2>
+                    <p class='card-text'>Parrafo</p>
+                </div>
                 <a href="#" class="card-button">Boton</a>
             </article>
             <article class="cards-container__items">
                 <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
-                <h2 class="card-title">Titulo</h2>
-                <p class='card-text'>Parrafo</p>
+                <div class="card-text-container">
+                    <h2 class="card-title">Titulo</h2>
+                    <p class='card-text'>Parrafo</p>
+                </div>
                 <a href="#" class="card-button">Boton</a>
             </article>
             <article class="cards-container__items">
                 <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
-                <h2 class="card-title">Titulo</h2>
-                <p class='card-text'>Parrafo</p>
+                <div class="card-text-container">
+                    <h2 class="card-title">Titulo</h2>
+                    <p class='card-text'>Parrafo</p>
+                </div>
                 <a href="#" class="card-button">Boton</a>
             </article>
             <article class="cards-container__items">
                 <img src="https://www.placeimg.com/200/150/tech" alt="" class="card-img">
-                <h2 class="card-title">Titulo</h2>
-                <p class='card-text'>Parrafo</p>
+                <div class="card-text-container">
+                    <h2 class="card-title">Titulo</h2>
+                    <p class='card-text'>Parrafo</p>
+                </div>
                 <a href="#" class="card-button">Boton</a>
             </article>
         </section>
