--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="normalize.css">
     <script src="https://kit.fontawesome.com/12531dd9e9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,11 +86,11 @@
 
     <footer class="footer">
         <div class="contact-form-container">
-            <h2 class="form-title">¡Contactanos!</h2>
+            <h3 class="form-title">Contactanos</h3>
             <form class="contact-form">
-                <input name="name" type="text" class="contact-form-input  name" required>
-                <input name="email" type="email" class="contact-form-input  email" required>
-                <textarea name="messge" class="contact-form-input  message"></textarea>
+                <input name="name" type="text" class="contact-form-input  name" placeholder="Ingresa tu nombre" required>
+                <input name="email" type="email" class="contact-form-input  email" placeholder="Ingresa tu correo electrónico" required>
+                <textarea name="message" class="contact-form-input  message" placeholder="Ingresa un mensaje"></textarea>
                 <input type="submit" class="contact-form-input  send">
             </form>
         </div>
