adding a few things in the footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <ul class="menu">
                 <li class="menu__list"><a href="#Inicio" class="menu__link">Inicio</a></li>
                 <li class="menu__list"><a href="#Cursos" class="menu__link">Cursos</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Seccion 3</a></li>
-                <li class="menu__list"><a href="#" class="menu__link">Seccion 4</a></li>
+                <li class="menu__list"><a href="#Footer" class="menu__link">Acerca de Nosotros</a></li>
             </ul>
         </nav>
         </div>
@@ -84,7 +83,16 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="Footer">
+        <div class="social-media">
+            <p class="social-media__text">Nuestras redes sociales</p>
+            <ul class="social-list">
+                <li class="social-list__items"><a href="#" class="social-list__links"><i class="fab fa-instagram"></i></a></li>
+                <li class="social-list__items"><a href="#" class="social-list__links"><i class="fab fa-twitter"></i></a></li>
+                <li class="social-list__items"><a href="#" class="social-list__links"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="social-list__items"><a href="#" class="social-list__links"><i class="fab fa-github"></i></a></li>
+            </ul>
+        </div>
         <div class="contact-form-container">
             <h3 class="form-title">Contactanos</h3>
             <form class="contact-form">
@@ -94,7 +102,9 @@
                 <input type="submit" class="contact-form-input  send">
             </form>
         </div>
-        <p class="footer-copyright">&copy Elías I. Rodriguez</p>
+        <div class="copyright">
+            <p class="footer-copyright">&copy Elías I. Rodriguez. Todos los derechos reservados.</p>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
