--- a/index.html
+++ b/index.html
@@ -32,51 +32,51 @@
     <main class="main">
         <section class="sections  section-presentation" id="Inicio">
             <article class="article-presentation">
-                <h2 class="title">Titulo</h2>
-                <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, tempora quos error, enim veritatis alias pariatur consectetur velitfugit autem soluta odit. Optio reprehenderit ducimus laboriosam soluta, eveniet ut et.</p>
-                <a href="#" class="btn">BUTTON</a>
+                <h2 class="title">Web Masters</h2>
+                <p class="text">Somos tu mejor opción para aprender, sigue nuestras rutas de aprendizaje y crea paginas web como un profesional</p>
+                <a href="#" class="btn">Registrarme</a>
             </article>
         </section>  
 
 
         <section class="sections section-cards" id="Cursos">
-            <h2 class="section-cards__title">Titulo</h2>
+            <h2 class="section-cards__title">Nuestros cursos</h2>
             <div class="cards-container">
                 <article class="cards-container__items">
                     <img src="assets/html.png" alt="html" class="card-img">
-                    <h2 class="card-title">Titulo</h2>
-                    <p class='card-text'>Parrafo</p>
-                <a href="#" class="card-button  html">Boton</a>
+                    <h2 class="card-title">HTML</h2>
+                    <p class='card-text'>Aprende HTML</p>
+                <a href="#" class="card-button  html">Ir al curso</a>
                 </article>
                 <article class="cards-container__items">
                     <img src="assets/css.jpeg" alt="css" class="card-img">
-                    <h2 class="card-title">Titulo</h2>
-                    <p class='card-text'>Parrafo</p>
-                    <a href="#" class="card-button  css">Boton</a>
+                    <h2 class="card-title">CSS</h2>
+                    <p class='card-text'>Aprende CSS</p>
+                    <a href="#" class="card-button  css">Ir al curso</a>
                 </article>
                 <article class="cards-container__items">
                     <img src="assets/javascript.png" alt="javascript" class="card-img">
-                    <h2 class="card-title">Titulo</h2>
-                    <p class='card-text'>Parrafo</p>
-                    <a href="#" class="card-button  js">Boton</a>
+                    <h2 class="card-title">Javascript</h2>
+                    <p class='card-text'>Aprende Javascript</p>
+                    <a href="#" class="card-button  js">Ir al curso</a>
                 </article>
                 <article class="cards-container__items">
                     <img src="assets/react.png" alt="react" class="card-img">
-                    <h2 class="card-title">Titulo</h2>
-                    <p class='card-text'>Parrafo</p>
-                    <a href="#" class="card-button  react">Boton</a>
+                    <h2 class="card-title">React</h2>
+                    <p class='card-text'>Aprende React</p>
+                    <a href="#" class="card-button  react">Ir al curso</a>
                 </article>
                 <article class="cards-container__items">
                     <img src="assets/sass.png" alt="sass" class="card-img">
-                    <h2 class="card-title">Titulo</h2>
-                    <p class='card-text'>Parrafo</p>
-                    <a href="#" class="card-button  sass">Boton</a>
+                    <h2 class="card-title">SASS</h2>
+                    <p class='card-text'>Aprende SASS</p>
+                    <a href="#" class="card-button  sass">Ir al curso</a>
                 </article>
                 <article class="cards-container__items">
                     <img src="assets/node.png" alt="node" class="card-img">
-                    <h2 class="card-title">Titulo</h2>
-                    <p class='card-text'>Parrafo</p>
-                    <a href="#" class="card-button  node">Boton</a>
+                    <h2 class="card-title">Node</h2>
+                    <p class='card-text'>Aprende Node</p>
+                    <a href="#" class="card-button  node">Ir al curso</a>
                 </article>
             </div>
         </section>
