--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
     
     <main class="main">
-        <section class="sections  section-presentation" id="Inicio">
-            <article class="article-presentation">
-                <h2 class="title">Web Masters</h2>
-                <p class="text">Somos tu mejor opción para aprender, sigue nuestras rutas de aprendizaje y crea paginas web como un profesional</p>
-                <a href="#" class="btn">Registrarme</a>
+        <section class="sections  presentation" id="Inicio">
+            <article class="presentation__content">
+                <h2 class="presentation-title">Web Masters</h2>
+                <p class="presentation-text">Somos tu mejor opción para aprender, sigue nuestras rutas de aprendizaje y crea paginas web como un profesional</p>
+                <a href="#" class="presentation-btn">Registrarme</a>
             </article>
         </section>  
 
